Refactored code, added user repository, added some exceptions